trunk/src/language/cpp/bison.output
Grammar

    0 $accept: program $end

    1 program: program robot
    2        | robot

    3 define_bot: TOKEN_ROBOT TOKEN_IDENTIFIER

    4 robot: define_bot TOKEN_BEGIN options targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    5 targets: /* empty */
    6        | targets TOKEN_KILLED TOKEN_OPER_REL TOKEN_UINT
    7        | targets TOKEN_VISIT TOKEN_LPAR places TOKEN_RPAR
    8        | targets TOKEN_VISIT_SEQUENCE TOKEN_LPAR places TOKEN_RPAR

    9 places: TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   10       | places TOKEN_COMMA TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   11       | TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   12       | places TOKEN_COMMA TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

   13 options: /* empty */
   14        | options TOKEN_OPTION TOKEN_ASSIGN TOKEN_UINT
   15        | options TOKEN_KILL TOKEN_IDENTIFIER
   16        | options TOKEN_SKIN TOKEN_IDENTIFIER

   17 global_variables: /* empty */
   18                 | global_variables local_variables

   19 type: simple_type
   20     | complex_type

   21 local_variables: type names TOKEN_SEMICOLON

   22 simple_type: TOKEN_VAR_REAL
   23            | TOKEN_VAR_INT
   24            | TOKEN_LOCATION
   25            | TOKEN_OBJECT

   26 complex_type: simple_type ranges

   27 ranges: TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   28       | ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

   29 names_: TOKEN_IDENTIFIER
   30       | TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   31       | TOKEN_IDENTIFIER TOKEN_ASSIGN begin_type values end_type

   32 names: names_
   33      | names names_

   34 begin_type: TOKEN_BEGIN

   35 end_type: TOKEN_END

   36 values: expression
   37       | values TOKEN_COMMA expression
   38       | begin_type values end_type
   39       | values TOKEN_COMMA begin_type values end_type

   40 declare_functions: /* empty */
   41                  | declare_function_

   42 function_header: return_type function_name TOKEN_LPAR parameters_empty TOKEN_RPAR

   43 function_name: TOKEN_FUNCTION TOKEN_IDENTIFIER

   44 return_type: TOKEN_VOID
   45            | type

   46 parameters_empty: /* empty */
   47                 | parameters

   48 parameters: type TOKEN_IDENTIFIER
   49           | parameters TOKEN_COMMA type TOKEN_IDENTIFIER
   50           | TOKEN_REFERENCE type TOKEN_IDENTIFIER
   51           | parameters TOKEN_COMMA TOKEN_REFERENCE type TOKEN_IDENTIFIER

   52 declare_function_: function_header block_of_instructions
   53                  | declare_function_ function_header block_of_instructions

   54 number: TOKEN_OPER_SIGNADD TOKEN_REAL
   55       | TOKEN_OPER_SIGNADD TOKEN_UINT
   56       | TOKEN_REAL
   57       | TOKEN_UINT

   58 begin: TOKEN_BEGIN

   59 end: TOKEN_END

   60 block_of_instructions: begin commands_and_empty end

   61 commands_and_empty: /* empty */
   62                   | commands

   63 commands: TOKEN_SEMICOLON
   64         | matched
   65         | commands matched
   66         | unmatched
   67         | commands unmatched

   68 cycle_for: TOKEN_FOR

   69 command: cycle_for TOKEN_LPAR init expression_bool TOKEN_SEMICOLON simple_command TOKEN_RPAR begin commands end
   70        | TOKEN_DO begin commands end TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR TOKEN_SEMICOLON
   71        | TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR begin commands end
   72        | TOKEN_RETURN expression TOKEN_SEMICOLON
   73        | TOKEN_RETURN TOKEN_SEMICOLON
   74        | TOKEN_BREAK TOKEN_SEMICOLON
   75        | TOKEN_CONTINUE TOKEN_SEMICOLON
   76        | simple_command TOKEN_SEMICOLON

   77 command_var: local_variables
   78            | command

   79 simple_command: assign
   80               | unary_var

   81 assign: variable TOKEN_ASSIGN expression

   82 array: TOKEN_IDENTIFIER array_access
   83      | TOKEN_SEEN TOKEN_LSBRA number TOKEN_RSBRA

   84 call_fce: TOKEN_IDENTIFIER TOKEN_LPAR call_parameters TOKEN_RPAR
   85         | TOKEN_OBJECT_FEATURE TOKEN_LPAR call_parameters TOKEN_RPAR

   86 call_parameters: expression
   87                | /* empty */
   88                | call_parameters TOKEN_COMMA expression

   89 matched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE matched
   90        | command_var
   91        | block_of_instructions

   92 unmatched: TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   93          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR command
   94          | TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE unmatched

   95 init: local_variables
   96     | assign TOKEN_SEMICOLON

   97 unary_var: variable
   98          | variable TOKEN_PLUSPLUS
   99          | variable TOKEN_MINUSMINUS

  100 variable: TOKEN_IDENTIFIER
  101         | call_fce
  102         | variable TOKEN_DOT TOKEN_IDENTIFIER
  103         | array

  104 array_access: TOKEN_LSBRA exps TOKEN_RSBRA
  105             | array_access TOKEN_LSBRA exps TOKEN_RSBRA

  106 exps: expression
  107     | exps TOKEN_COMMA expression

  108 expression_base: unary_var
  109                | number
  110                | TOKEN_LPAR expression_bool TOKEN_RPAR

  111 expression_mul: expression_base
  112               | expression_mul TOKEN_OPER_MUL expression_base

  113 expression_add: expression_mul
  114               | expression_add TOKEN_OPER_SIGNADD expression_mul

  115 expression: expression_add

  116 expression_bool_base: expression
  117                     | expression TOKEN_OPER_REL expression

  118 expression_bool_or: expression_bool_base
  119                   | expression_bool_or TOKEN_BOOL_OR expression_bool_base

  120 expression_bool: expression_bool_or
  121                | expression_bool TOKEN_BOOL_AND expression_bool_or


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_MAIN (258) 4
TOKEN_LOCATION (259) 24
TOKEN_OBJECT (260) 25
TOKEN_VAR_REAL (261) 22
TOKEN_VAR_INT (262) 23
TOKEN_VOID (263) 44
TOKEN_FUNCTION (264) 43
TOKEN_IF (265) 89 92 93 94
TOKEN_ELSE (266) 89 94
TOKEN_WHILE (267) 70 71
TOKEN_DO (268) 70
TOKEN_FOR (269) 68
TOKEN_RETURN (270) 72 73
TOKEN_BREAK (271) 74
TOKEN_REFERENCE (272) 50 51
TOKEN_CONTINUE (273) 75
TOKEN_ROBOT (274) 3
TOKEN_OPTION (275) 14
TOKEN_OBJECT_FEATURE (276) 85
TOKEN_SEMICOLON (277) 21 63 69 70 72 73 74 75 76 96
TOKEN_DOT (278) 102
TOKEN_COMMA (279) 9 10 12 37 39 49 51 88 107
TOKEN_LPAR (280) 4 7 8 42 69 70 71 84 85 89 92 93 94 110
TOKEN_RPAR (281) 4 7 8 42 69 70 71 84 85 89 92 93 94 110
TOKEN_LSBRA (282) 9 10 11 12 27 28 83 104 105
TOKEN_RSBRA (283) 9 10 11 12 27 28 83 104 105
TOKEN_ASSIGN (284) 14 30 31 81
TOKEN_BEGIN (285) 4 34 58
TOKEN_END (286) 4 35 59
TOKEN_IDENTIFIER (287) 3 15 16 29 30 31 43 48 49 50 51 82 84 100 102
TOKEN_UINT (288) 6 9 10 11 12 14 27 28 55 57
TOKEN_REAL (289) 54 56
TOKEN_SEEN (290) 83
TOKEN_VISIT (291) 7
TOKEN_VISIT_SEQUENCE (292) 8
TOKEN_KILLED (293) 6
TOKEN_SKIN (294) 16
TOKEN_KILL (295) 15
TOKEN_START (296) 11 12
TOKEN_OPER_REL (297) 6 117
TOKEN_OPER_SIGNADD (298) 54 55 114
TOKEN_OPER_MUL (299) 112
TOKEN_PLUSPLUS (300) 98
TOKEN_MINUSMINUS (301) 99
TOKEN_BOOL_AND (302) 121
TOKEN_BOOL_OR (303) 119


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1 2, on right: 0 1
define_bot (51)
    on left: 3, on right: 4
robot (52)
    on left: 4, on right: 1 2
targets (53)
    on left: 5 6 7 8, on right: 4 6 7 8
places (54)
    on left: 9 10 11 12, on right: 7 8 10 12
options (55)
    on left: 13 14 15 16, on right: 4 14 15 16
global_variables (56)
    on left: 17 18, on right: 4 18
type (57)
    on left: 19 20, on right: 21 45 48 49 50 51
local_variables (58)
    on left: 21, on right: 18 77 95
simple_type (59)
    on left: 22 23 24 25, on right: 19 26
complex_type (60)
    on left: 26, on right: 20
ranges (61)
    on left: 27 28, on right: 26 28
names_ (62)
    on left: 29 30 31, on right: 32 33
names (63)
    on left: 32 33, on right: 21 33
begin_type (64)
    on left: 34, on right: 31 38 39
end_type (65)
    on left: 35, on right: 31 38 39
values (66)
    on left: 36 37 38 39, on right: 31 37 38 39
declare_functions (67)
    on left: 40 41, on right: 4
function_header (68)
    on left: 42, on right: 52 53
function_name (69)
    on left: 43, on right: 42
return_type (70)
    on left: 44 45, on right: 42
parameters_empty (71)
    on left: 46 47, on right: 42
parameters (72)
    on left: 48 49 50 51, on right: 47 49 51
declare_function_ (73)
    on left: 52 53, on right: 41 53
number (74)
    on left: 54 55 56 57, on right: 83 109
begin (75)
    on left: 58, on right: 60 69 70 71
end (76)
    on left: 59, on right: 60 69 70 71
block_of_instructions (77)
    on left: 60, on right: 4 52 53 91 92
commands_and_empty (78)
    on left: 61 62, on right: 60
commands (79)
    on left: 63 64 65 66 67, on right: 62 65 67 69 70 71
cycle_for (80)
    on left: 68, on right: 69
command (81)
    on left: 69 70 71 72 73 74 75 76, on right: 78 93
command_var (82)
    on left: 77 78, on right: 90
simple_command (83)
    on left: 79 80, on right: 69 76
assign (84)
    on left: 81, on right: 79 96
array (85)
    on left: 82 83, on right: 103
call_fce (86)
    on left: 84 85, on right: 101
call_parameters (87)
    on left: 86 87 88, on right: 84 85 88
matched (88)
    on left: 89 90 91, on right: 64 65 89 94
unmatched (89)
    on left: 92 93 94, on right: 66 67 94
init (90)
    on left: 95 96, on right: 69
unary_var (91)
    on left: 97 98 99, on right: 80 108
variable (92)
    on left: 100 101 102 103, on right: 81 97 98 99 102
array_access (93)
    on left: 104 105, on right: 82 105
exps (94)
    on left: 106 107, on right: 104 105 107
expression_base (95)
    on left: 108 109 110, on right: 111 112
expression_mul (96)
    on left: 111 112, on right: 112 113 114
expression_add (97)
    on left: 113 114, on right: 114 115
expression (98)
    on left: 115, on right: 30 36 37 72 81 86 88 106 107 116 117
expression_bool_base (99)
    on left: 116 117, on right: 118 119
expression_bool_or (100)
    on left: 118 119, on right: 119 120 121
expression_bool (101)
    on left: 120 121, on right: 69 70 71 89 92 93 94 110 121


state 0

    0 $accept: . program $end
    1 program: . program robot
    2        | . robot
    3 define_bot: . TOKEN_ROBOT TOKEN_IDENTIFIER
    4 robot: . define_bot TOKEN_BEGIN options targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    TOKEN_ROBOT  shift, and go to state 1

    program     go to state 2
    define_bot  go to state 3
    robot       go to state 4


state 1

    3 define_bot: TOKEN_ROBOT . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 5


state 2

    0 $accept: program . $end
    1 program: program . robot
    3 define_bot: . TOKEN_ROBOT TOKEN_IDENTIFIER
    4 robot: . define_bot TOKEN_BEGIN options targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    $end         shift, and go to state 6
    TOKEN_ROBOT  shift, and go to state 1

    define_bot  go to state 3
    robot       go to state 7


state 3

    4 robot: define_bot . TOKEN_BEGIN options targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    TOKEN_BEGIN  shift, and go to state 8


state 4

    2 program: robot .

    $default  reduce using rule 2 (program)


state 5

    3 define_bot: TOKEN_ROBOT TOKEN_IDENTIFIER .

    $default  reduce using rule 3 (define_bot)


state 6

    0 $accept: program $end .

    $default  accept


state 7

    1 program: program robot .

    $default  reduce using rule 1 (program)


state 8

    4 robot: define_bot TOKEN_BEGIN . options targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END
   13 options: .
   14        | . options TOKEN_OPTION TOKEN_ASSIGN TOKEN_UINT
   15        | . options TOKEN_KILL TOKEN_IDENTIFIER
   16        | . options TOKEN_SKIN TOKEN_IDENTIFIER

    $default  reduce using rule 13 (options)

    options  go to state 9


state 9

    4 robot: define_bot TOKEN_BEGIN options . targets global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END
    5 targets: .  [TOKEN_MAIN, TOKEN_LOCATION, TOKEN_OBJECT, TOKEN_VAR_REAL, TOKEN_VAR_INT, TOKEN_VOID, TOKEN_VISIT, TOKEN_VISIT_SEQUENCE, TOKEN_KILLED]
    6        | . targets TOKEN_KILLED TOKEN_OPER_REL TOKEN_UINT
    7        | . targets TOKEN_VISIT TOKEN_LPAR places TOKEN_RPAR
    8        | . targets TOKEN_VISIT_SEQUENCE TOKEN_LPAR places TOKEN_RPAR
   14 options: options . TOKEN_OPTION TOKEN_ASSIGN TOKEN_UINT
   15        | options . TOKEN_KILL TOKEN_IDENTIFIER
   16        | options . TOKEN_SKIN TOKEN_IDENTIFIER

    TOKEN_OPTION  shift, and go to state 10
    TOKEN_SKIN    shift, and go to state 11
    TOKEN_KILL    shift, and go to state 12

    $default  reduce using rule 5 (targets)

    targets  go to state 13


state 10

   14 options: options TOKEN_OPTION . TOKEN_ASSIGN TOKEN_UINT

    TOKEN_ASSIGN  shift, and go to state 14


state 11

   16 options: options TOKEN_SKIN . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 15


state 12

   15 options: options TOKEN_KILL . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 16


state 13

    4 robot: define_bot TOKEN_BEGIN options targets . global_variables declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END
    6 targets: targets . TOKEN_KILLED TOKEN_OPER_REL TOKEN_UINT
    7        | targets . TOKEN_VISIT TOKEN_LPAR places TOKEN_RPAR
    8        | targets . TOKEN_VISIT_SEQUENCE TOKEN_LPAR places TOKEN_RPAR
   17 global_variables: .  [TOKEN_MAIN, TOKEN_LOCATION, TOKEN_OBJECT, TOKEN_VAR_REAL, TOKEN_VAR_INT, TOKEN_VOID]
   18                 | . global_variables local_variables

    TOKEN_VISIT           shift, and go to state 17
    TOKEN_VISIT_SEQUENCE  shift, and go to state 18
    TOKEN_KILLED          shift, and go to state 19

    $default  reduce using rule 17 (global_variables)

    global_variables  go to state 20


state 14

   14 options: options TOKEN_OPTION TOKEN_ASSIGN . TOKEN_UINT

    TOKEN_UINT  shift, and go to state 21


state 15

   16 options: options TOKEN_SKIN TOKEN_IDENTIFIER .

    $default  reduce using rule 16 (options)


state 16

   15 options: options TOKEN_KILL TOKEN_IDENTIFIER .

    $default  reduce using rule 15 (options)


state 17

    7 targets: targets TOKEN_VISIT . TOKEN_LPAR places TOKEN_RPAR

    TOKEN_LPAR  shift, and go to state 22


state 18

    8 targets: targets TOKEN_VISIT_SEQUENCE . TOKEN_LPAR places TOKEN_RPAR

    TOKEN_LPAR  shift, and go to state 23


state 19

    6 targets: targets TOKEN_KILLED . TOKEN_OPER_REL TOKEN_UINT

    TOKEN_OPER_REL  shift, and go to state 24


state 20

    4 robot: define_bot TOKEN_BEGIN options targets global_variables . declare_functions TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END
   18 global_variables: global_variables . local_variables
   19 type: . simple_type
   20     | . complex_type
   21 local_variables: . type names TOKEN_SEMICOLON
   22 simple_type: . TOKEN_VAR_REAL
   23            | . TOKEN_VAR_INT
   24            | . TOKEN_LOCATION
   25            | . TOKEN_OBJECT
   26 complex_type: . simple_type ranges
   40 declare_functions: .  [TOKEN_MAIN]
   41                  | . declare_function_
   42 function_header: . return_type function_name TOKEN_LPAR parameters_empty TOKEN_RPAR
   44 return_type: . TOKEN_VOID
   45            | . type
   52 declare_function_: . function_header block_of_instructions
   53                  | . declare_function_ function_header block_of_instructions

    TOKEN_LOCATION  shift, and go to state 25
    TOKEN_OBJECT    shift, and go to state 26
    TOKEN_VAR_REAL  shift, and go to state 27
    TOKEN_VAR_INT   shift, and go to state 28
    TOKEN_VOID      shift, and go to state 29

    $default  reduce using rule 40 (declare_functions)

    type               go to state 30
    local_variables    go to state 31
    simple_type        go to state 32
    complex_type       go to state 33
    declare_functions  go to state 34
    function_header    go to state 35
    return_type        go to state 36
    declare_function_  go to state 37


state 21

   14 options: options TOKEN_OPTION TOKEN_ASSIGN TOKEN_UINT .

    $default  reduce using rule 14 (options)


state 22

    7 targets: targets TOKEN_VISIT TOKEN_LPAR . places TOKEN_RPAR
    9 places: . TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   10       | . places TOKEN_COMMA TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   11       | . TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   12       | . places TOKEN_COMMA TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 38
    TOKEN_START  shift, and go to state 39

    places  go to state 40


state 23

    8 targets: targets TOKEN_VISIT_SEQUENCE TOKEN_LPAR . places TOKEN_RPAR
    9 places: . TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   10       | . places TOKEN_COMMA TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   11       | . TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   12       | . places TOKEN_COMMA TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 38
    TOKEN_START  shift, and go to state 39

    places  go to state 41


state 24

    6 targets: targets TOKEN_KILLED TOKEN_OPER_REL . TOKEN_UINT

    TOKEN_UINT  shift, and go to state 42


state 25

   24 simple_type: TOKEN_LOCATION .

    $default  reduce using rule 24 (simple_type)


state 26

   25 simple_type: TOKEN_OBJECT .

    $default  reduce using rule 25 (simple_type)


state 27

   22 simple_type: TOKEN_VAR_REAL .

    $default  reduce using rule 22 (simple_type)


state 28

   23 simple_type: TOKEN_VAR_INT .

    $default  reduce using rule 23 (simple_type)


state 29

   44 return_type: TOKEN_VOID .

    $default  reduce using rule 44 (return_type)


state 30

   21 local_variables: type . names TOKEN_SEMICOLON
   29 names_: . TOKEN_IDENTIFIER
   30       | . TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   31       | . TOKEN_IDENTIFIER TOKEN_ASSIGN begin_type values end_type
   32 names: . names_
   33      | . names names_
   45 return_type: type .  [TOKEN_FUNCTION]

    TOKEN_IDENTIFIER  shift, and go to state 43

    $default  reduce using rule 45 (return_type)

    names_  go to state 44
    names   go to state 45


state 31

   18 global_variables: global_variables local_variables .

    $default  reduce using rule 18 (global_variables)


state 32

   19 type: simple_type .  [TOKEN_FUNCTION, TOKEN_IDENTIFIER]
   26 complex_type: simple_type . ranges
   27 ranges: . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA
   28       | . ranges TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 46

    $default  reduce using rule 19 (type)

    ranges  go to state 47


state 33

   20 type: complex_type .

    $default  reduce using rule 20 (type)


state 34

    4 robot: define_bot TOKEN_BEGIN options targets global_variables declare_functions . TOKEN_MAIN TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    TOKEN_MAIN  shift, and go to state 48


state 35

   52 declare_function_: function_header . block_of_instructions
   58 begin: . TOKEN_BEGIN
   60 block_of_instructions: . begin commands_and_empty end

    TOKEN_BEGIN  shift, and go to state 49

    begin                  go to state 50
    block_of_instructions  go to state 51


state 36

   42 function_header: return_type . function_name TOKEN_LPAR parameters_empty TOKEN_RPAR
   43 function_name: . TOKEN_FUNCTION TOKEN_IDENTIFIER

    TOKEN_FUNCTION  shift, and go to state 52

    function_name  go to state 53


state 37

   19 type: . simple_type
   20     | . complex_type
   22 simple_type: . TOKEN_VAR_REAL
   23            | . TOKEN_VAR_INT
   24            | . TOKEN_LOCATION
   25            | . TOKEN_OBJECT
   26 complex_type: . simple_type ranges
   41 declare_functions: declare_function_ .  [TOKEN_MAIN]
   42 function_header: . return_type function_name TOKEN_LPAR parameters_empty TOKEN_RPAR
   44 return_type: . TOKEN_VOID
   45            | . type
   53 declare_function_: declare_function_ . function_header block_of_instructions

    TOKEN_LOCATION  shift, and go to state 25
    TOKEN_OBJECT    shift, and go to state 26
    TOKEN_VAR_REAL  shift, and go to state 27
    TOKEN_VAR_INT   shift, and go to state 28
    TOKEN_VOID      shift, and go to state 29

    $default  reduce using rule 41 (declare_functions)

    type             go to state 54
    simple_type      go to state 32
    complex_type     go to state 33
    function_header  go to state 55
    return_type      go to state 36


state 38

    9 places: TOKEN_LSBRA . TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA

    TOKEN_UINT  shift, and go to state 56


state 39

   11 places: TOKEN_START . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 57


state 40

    7 targets: targets TOKEN_VISIT TOKEN_LPAR places . TOKEN_RPAR
   10 places: places . TOKEN_COMMA TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   12       | places . TOKEN_COMMA TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_COMMA  shift, and go to state 58
    TOKEN_RPAR   shift, and go to state 59


state 41

    8 targets: targets TOKEN_VISIT_SEQUENCE TOKEN_LPAR places . TOKEN_RPAR
   10 places: places . TOKEN_COMMA TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   12       | places . TOKEN_COMMA TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_COMMA  shift, and go to state 58
    TOKEN_RPAR   shift, and go to state 60


state 42

    6 targets: targets TOKEN_KILLED TOKEN_OPER_REL TOKEN_UINT .

    $default  reduce using rule 6 (targets)


state 43

   29 names_: TOKEN_IDENTIFIER .  [TOKEN_SEMICOLON, TOKEN_IDENTIFIER]
   30       | TOKEN_IDENTIFIER . TOKEN_ASSIGN expression
   31       | TOKEN_IDENTIFIER . TOKEN_ASSIGN begin_type values end_type

    TOKEN_ASSIGN  shift, and go to state 61

    $default  reduce using rule 29 (names_)


state 44

   32 names: names_ .

    $default  reduce using rule 32 (names)


state 45

   21 local_variables: type names . TOKEN_SEMICOLON
   29 names_: . TOKEN_IDENTIFIER
   30       | . TOKEN_IDENTIFIER TOKEN_ASSIGN expression
   31       | . TOKEN_IDENTIFIER TOKEN_ASSIGN begin_type values end_type
   33 names: names . names_

    TOKEN_SEMICOLON   shift, and go to state 62
    TOKEN_IDENTIFIER  shift, and go to state 43

    names_  go to state 63


state 46

   27 ranges: TOKEN_LSBRA . TOKEN_UINT TOKEN_RSBRA

    TOKEN_UINT  shift, and go to state 64


state 47

   26 complex_type: simple_type ranges .  [TOKEN_FUNCTION, TOKEN_IDENTIFIER]
   28 ranges: ranges . TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 65

    $default  reduce using rule 26 (complex_type)


state 48

    4 robot: define_bot TOKEN_BEGIN options targets global_variables declare_functions TOKEN_MAIN . TOKEN_LPAR TOKEN_RPAR block_of_instructions TOKEN_END

    TOKEN_LPAR  shift, and go to state 66


state 49

   58 begin: TOKEN_BEGIN .

    $default  reduce using rule 58 (begin)


state 50

   19 type: . simple_type
   20     | . complex_type
   21 local_variables: . type names TOKEN_SEMICOLON
   22 simple_type: . TOKEN_VAR_REAL
   23            | . TOKEN_VAR_INT
   24            | . TOKEN_LOCATION
   25            | . TOKEN_OBJECT
   26 complex_type: . simple_type ranges
   58 begin: . TOKEN_BEGIN
   60 block_of_instructions: . begin commands_and_empty end
   60                      | begin . commands_and_empty end
   61 commands_and_empty: .  [TOKEN_END]
   62                   | . commands
   63 commands: . TOKEN_SEMICOLON
   64         | . matched
   65         | . commands matched
   66         | . unmatched
   67         | . commands unmatched
   68 cycle_for: . TOKEN_FOR
   69 command: . cycle_for TOKEN_LPAR init expression_bool TOKEN_SEMICOLON simple_command TOKEN_RPAR begin commands end
   70        | . TOKEN_DO begin commands end TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR TOKEN_SEMICOLON
   71        | . TOKEN_WHILE TOKEN_LPAR expression_bool TOKEN_RPAR begin commands end
   72        | . TOKEN_RETURN expression TOKEN_SEMICOLON
   73        | . TOKEN_RETURN TOKEN_SEMICOLON
   74        | . TOKEN_BREAK TOKEN_SEMICOLON
   75        | . TOKEN_CONTINUE TOKEN_SEMICOLON
   76        | . simple_command TOKEN_SEMICOLON
   77 command_var: . local_variables
   78            | . command
   79 simple_command: . assign
   80               | . unary_var
   81 assign: . variable TOKEN_ASSIGN expression
   82 array: . TOKEN_IDENTIFIER array_access
   83      | . TOKEN_SEEN TOKEN_LSBRA number TOKEN_RSBRA
   84 call_fce: . TOKEN_IDENTIFIER TOKEN_LPAR call_parameters TOKEN_RPAR
   85         | . TOKEN_OBJECT_FEATURE TOKEN_LPAR call_parameters TOKEN_RPAR
   89 matched: . TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE matched
   90        | . command_var
   91        | . block_of_instructions
   92 unmatched: . TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR block_of_instructions
   93          | . TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR command
   94          | . TOKEN_IF TOKEN_LPAR expression_bool TOKEN_RPAR matched TOKEN_ELSE unmatched
   97 unary_var: . variable
   98          | . variable TOKEN_PLUSPLUS
   99          | . variable TOKEN_MINUSMINUS
  100 variable: . TOKEN_IDENTIFIER
  101         | . call_fce
  102         | . variable TOKEN_DOT TOKEN_IDENTIFIER
  103         | . array

    TOKEN_LOCATION        shift, and go to state 25
    TOKEN_OBJECT          shift, and go to state 26
    TOKEN_VAR_REAL        shift, and go to state 27
    TOKEN_VAR_INT         shift, and go to state 28
    TOKEN_IF              shift, and go to state 67
    TOKEN_WHILE           shift, and go to state 68
    TOKEN_DO              shift, and go to state 69
    TOKEN_FOR             shift, and go to state 70
    TOKEN_RETURN          shift, and go to state 71
    TOKEN_BREAK           shift, and go to state 72
    TOKEN_CONTINUE        shift, and go to state 73
    TOKEN_OBJECT_FEATURE  shift, and go to state 74
    TOKEN_SEMICOLON       shift, and go to state 75
    TOKEN_BEGIN           shift, and go to state 49
    TOKEN_IDENTIFIER      shift, and go to state 76
    TOKEN_SEEN            shift, and go to state 77

    $default  reduce using rule 61 (commands_and_empty)

    type                   go to state 78
    local_variables        go to state 79
    simple_type            go to state 32
    complex_type           go to state 33
    begin                  go to state 50
    block_of_instructions  go to state 80
    commands_and_empty     go to state 81
    commands               go to state 82
    cycle_for              go to state 83
    command                go to state 84
    command_var            go to state 85
    simple_command         go to state 86
    assign                 go to state 87
    array                  go to state 88
    call_fce               go to state 89
    matched                go to state 90
    unmatched              go to state 91
    unary_var              go to state 92
    variable               go to state 93


state 51

   52 declare_function_: function_header block_of_instructions .

    $default  reduce using rule 52 (declare_function_)


state 52

   43 function_name: TOKEN_FUNCTION . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 94


state 53

   42 function_header: return_type function_name . TOKEN_LPAR parameters_empty TOKEN_RPAR

    TOKEN_LPAR  shift, and go to state 95


state 54

   45 return_type: type .

    $default  reduce using rule 45 (return_type)


state 55

   53 declare_function_: declare_function_ function_header . block_of_instructions
   58 begin: . TOKEN_BEGIN
   60 block_of_instructions: . begin commands_and_empty end

    TOKEN_BEGIN  shift, and go to state 49

    begin                  go to state 50
    block_of_instructions  go to state 96


state 56

    9 places: TOKEN_LSBRA TOKEN_UINT . TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA

    TOKEN_COMMA  shift, and go to state 97


state 57

   11 places: TOKEN_START TOKEN_LSBRA . TOKEN_UINT TOKEN_RSBRA

    TOKEN_UINT  shift, and go to state 98


state 58

   10 places: places TOKEN_COMMA . TOKEN_LSBRA TOKEN_UINT TOKEN_COMMA TOKEN_UINT TOKEN_RSBRA
   12       | places TOKEN_COMMA . TOKEN_START TOKEN_LSBRA TOKEN_UINT TOKEN_RSBRA

    TOKEN_LSBRA  shift, and go to state 99
    TOKEN_START  shift, and go to state 100


state 59

    7 targets: targets TOKEN_VISIT TOKEN_LPAR places TOKEN_RPAR .

    $default  reduce using rule 7 (targets)


state 60

    8 targets: targets TOKEN_VISIT_SEQUENCE TOKEN_LPAR places TOKEN_RPAR .

    $default  reduce using rule 8 (targets)


state 61
